5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1807_2563.log
== TEST (2019-06-06 16:16:28) 
-- CODE:
from numpy import*

vet=array(eval(input(""))

y=vet[x for x in vet if 5<=vet<7]
	print(y)
-- ERROR:
File "XXXX", line 5
    y=vet[x for x in vet if 5<=vet<7]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:16:39) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

y=vet[x for x in vet if 5<=vet<7]
	print(y)
-- ERROR:
File "XXXX", line 5
    y=vet[x for x in vet if 5<=vet<7]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:17:52) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

y=array(vet[x for x in vet>=5]
	print(y)
-- ERROR:
File "XXXX", line 5
    y=array(vet[x for x in vet>=5]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:17:56) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

y=array(vet[x for x in vet>=5])
	print(y)
-- ERROR:
File "XXXX", line 5
    y=array(vet[x for x in vet>=5])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:04) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

y=array([x for x in vet>=5])
	print(y)
-- ERROR:
File "XXXX", line 6
    print(y)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:08) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

y=array([x for x in vet>=5])
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:38) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

y=array([x for x in vet>=5 and vet<7])
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:22:22) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>0):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=0
		print(o)
		
	vet=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:22:25) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>0):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=0
		print(o)
		
	vet=array(eval(input("")))
	
-- EXECUTION TIME:
1.42211
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 12, in <module>
    vet=array(eval(input("")))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:22:44) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>1):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=0
		print(o)
		
	vet=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:23:26) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>1):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=1
		print(o)
		
	vet=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:23:33) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>1):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=1
			print(o)
		
	vet=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:23:46) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>1):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=1
			print(o)
	vet=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:24:39) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>1):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=1
	print(o)
	vet=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:25:08) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>1):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=1
	print(o)
	vet=array(eval(input("")))
	
-- EXECUTION TIME:
0.80778
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:15) 
-- CODE:
from numpy import*

vet=array(eval(input("")))

while(size(vet)>1):
	o=0
	for l in  vet:
		if(l>=5 and l<7):
			o+=1
	print(o)
	vet=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
